Cambiando la forma de presentar correo

--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
                     <p>+56996544620</p>
                 </div>
                 <div class="col-lg-2 text-center">
-                    <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-                    <p><a href="mailto:jp.perezvaras@gmail.com">jp.perezvaras@gmail.com</a></p>
+                    
+                    <a href="mailto:jp.perezvaras@gmail.com"><i class="fa fa-envelope-o fa-3x sr-contact"></i></a>
                 </div>
                 <div class="col-lg-2 text-center">
                     <i class="fa fa-linkedin fa-3x sr-contact"></i>
