--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Jean Pierre <i><img src="img/portfolio/fullsize/1.jpg" class="img-rounded"></i></a>
+                <a class="navbar-brand page-scroll" href="#page-top">Jean Pierre <i><img src="img/portfolio/perfil.png" class="img-circle peque"></i></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -146,6 +146,7 @@
                 <div class="col-lg-2 text-center">
                     
                     <a href="mailto:jp.perezvaras@gmail.com"><i class="fa fa-envelope-o fa-3x sr-contact"></i></a>
+                    <p><a href="mailto:jp.perezvaras@gmail.com">jp.perezvaras@gmail</a></p>
                 </div>
                 <div class="col-lg-2 text-center">
                     <i class="fa fa-linkedin fa-3x sr-contact"></i>
